--- a/src/main/resources/assets/steve/lang/es_mx.json
+++ b/src/main/resources/assets/steve/lang/es_mx.json
@@ -1,1 +1,5 @@
-
+{
+  "steve.chat.title": "Steve - Compañero IA",
+  "steve.chat.placeholder": "Pídele a Steve que haga algo...",
+  "steve.command.success": "Tarea completada exitosamente, compa."
+}
